--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,7 @@ celerybeat-schedule.*
 *.sage.py 
 
 # Environments
+env
 env/
 .env 
 .venv 
@@ -136,3 +137,5 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+.cache
